--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -4,3 +4,5 @@
   <p>Age: <%= astronaut.age %></p>
   <p>Job: <%= astronaut.job %></p>
 <% end %>
+<br>
+Average age of the astronauts: <%= @astronauts.average_age %>
