Complete User Story 4

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -7,6 +7,7 @@
   <p>Missions: <% astronaut.all_missions_asc.each do |m|%></p>
   <p><%=m%></p>
   <% end %>
+  <p>Total time in space: <%= astronaut.total_time_in_space %> days </p>
 <% end %>
 </section>
 <br>
